## [3.0.4] - not release yet!
 * @todo

## [3.0.3] - 26 June 2019
 * csv export: spatial metadata export contains option-id, added notes, removed extra curley brances from csv JSON export "{...}"
 * temporal (z) and spatial coordinates (xy) are represented as numbers with 3 decimal places
 * update spatial region markers (black dots in timeline) when user adds new regions (issue: 195)
 * metadata now gets deleted and are not left flagged as deleted.
 * code cleanup
 * when a file cannot be loaded, an error page is shown which allows update of file properties (issue: 196)
 * VIA now supports collaborative annotation using the VIA share feature

## [3.0.2] - 21 May 2019
 * shape selector icon now gets highlighted
 * fixed issues caused by rename of temporal segment variable's value
 * fixed issue in thumbnail caused by files added using file:// uri (path issue)
 * minor UI updates

## [3.0.1] - 20 May 2019
 * keyboard event listener attached to window instead of via_container to avoid missing keydown events when something else is in focus

## [3.0.0] - 17 May 2019
 * development of via-3.x.y began in Dec. 2018 with the aim to create a basic audio and video annotator
 * no external dependency, self contained and easy to use
 * light weight (complete application fits in a single html file of size ~ 275 KB)
 * manual annotation of local (using file:// uri) and remote (using http:// uri) files
 * supports definition of both temporal segmentation (e.g. from 3.2sec to 8.7sec) and spatial region (e.g. bounding box in still video frame)
 * keyboard shorcuts allow human annotators to be quick with manual annotation
 * annotations can be exported in CSV format
 * to reduce cognitive load on human annotators, VIA3 support for attributes of different types (plain text, drop down, radio, checkbox)
 * self contained demo for audio and video annotation
