@@ -13,7 +13,7 @@ html, body { margin:0; padding:0; box-sizing:border-box; font-family:Sans; font-
 .via_container { position:relative; display:grid; grid-template-rows:auto 1fr; grid-row-gap:0.5em; padding:0.3em; background-color:#ffffff; height:100vh; max-height:100vh; width:100vw; }
 
 /* top control panel */
-#via_control_panel_container { display:block; border:1px solid #707070; padding:0.4em 0.5em; height:2.45em; overflow-y:auto; }
+#via_control_panel_container { display:block; border:1px solid #707070; padding:0.4em 0.5em; }
 /*#via_control_panel_container { display:block; border:1px solid #707070; padding:0.4em 0.5em; height:2.2em; overflow-y:hidden; }*/
 #via_control_panel_container * { display:inline-block; margin:0 0.2em; outline:none; vertical-align:middle; }
 #via_control_panel_container .spacer { padding:0 0.5em; }
@@ -34,15 +34,21 @@ html, body { margin:0; padding:0; box-sizing:border-box; font-family:Sans; font-
 
 #view_container > .view_content_container > .file_container { display:block; position:relative; margin:0; padding:0; }
 #view_container > .view_content_container > .file_container * { position:absolute; top:0; }
-#view_container > .view_content_container > .file_container audio { height:3ch; width:90%; }
 #view_container > .view_content_container > .file_container .rinput_enabled { }
-#view_container > .view_content_container > .file_container > .smetadata_container { position:relative; display:inline-block; font-size:small; background-color:white; z-index:1001; }
+#view_container > .view_content_container > .file_container > .smetadata_container { display:inline-block; font-size:small; background-color:white; z-index:1001; }
 #view_container > .view_content_container > .file_container > .smetadata_container * { position:relative; vertical-align:middle; }
-#view_container > .view_content_container > .file_container > .smetadata_container table { border-collapse:collapse; border:none; margin:0.2em; }
+#view_container > .view_content_container > .file_container > .smetadata_container table { position:relative; border-collapse:collapse; border:none; margin:0.2em; }
 #view_container > .view_content_container > .file_container > .smetadata_container td { vertical-align:middle; border:1px solid #cccccc; padding:0.4em 0.2em; }
 #view_container > .view_content_container > .file_container > .smetadata_container th { vertical-align:middle; border:1px solid #cccccc; padding:0.4em 0.2em; }
 #view_container > .view_content_container > .file_container > .smetadata_container input { font-size:small; }
 #view_container > .view_content_container > .file_container > .smetadata_container select { font-size:small; }
+#view_container > .view_content_container > .file_container > .error_page { margin-left:1em; width:50em; }
+#view_container > .view_content_container > .file_container > .error_page * { position:relative; }
+#view_container > .view_content_container > .file_container > .error_page input { font-size:small; width:100%; }
+#view_container > .view_content_container > .file_container > .error_page select { font-size:small; }
+#view_container > .view_content_container > .file_container > .error_page textarea { font-size:small; }
+#view_container > .view_content_container > .file_container > .error_page table { border-collapse:collapse; border:1px solid #cccccc;  width:40em;}
+#view_container > .view_content_container > .file_container > .error_page td { padding:0.4em 1em; border:1px solid #cccccc; }
 
 
 /* metadata associated with a view */
@@ -94,6 +100,7 @@ to annotate temporal segments of a video: contains 4 rows
 .svg_button_selected { stroke:blue; fill:none; }
 .svg_button:hover { fill:#707070; cursor:pointer; }
 .svg_button:active { fill:#707070; cursor:pointer; }
+.svg_icon { position:relative; width:24px; height:24px; top:2px; }
 .disabled_button { fill:#cfcfcf !important; cursor:auto !important; }
 .disabled_button:hover { fill:#cfcfcf !important; cursor:auto !important; }
 .disabled_button:active { fill:#cfcfcf !important; cursor:auto !important; }
@@ -110,6 +117,7 @@ to annotate temporal segments of a video: contains 4 rows
 #via_page_container > .via_page th { border:1px solid #cccccc; padding:0.3em 0.4em; }
 #via_page_container > .via_page td { border:1px solid #cccccc; padding:0.3em 0.4em; }
 #via_page_container > .via_page li { margin:1em 0; }
+
 /* Message Panel */
 #_via_message_container { display:none; width:100vw; position:fixed; bottom:0px; z-index:9999; text-align:center; }
 #_via_message_container .message_panel_close_button { position:absolute; top:-0.4em; right:0.3em; color:white; cursor:pointer; font-size:small; }
