@@ -1,5 +1,7 @@
 ## [3.0.4] - not release yet!
- * @todo
+ * issue with spatial region attribute definition fixed (@todo)
+ * spatial region drawn on image is not shown after region draw operation completes (@todo)
+ * rectangular region selection shows unwanted marker (@todo)
 
 ## [3.0.3] - 26 June 2019
  * csv export: spatial metadata export contains option-id, added notes, removed extra curley brances from csv JSON export "{...}"
